# aja

./: .gitmodules  AJA.noscfg  CMakeLists.txt  README.md
.github/workflows/: release.yml
Config/: AJA.nosdef  InputNode.nosdef  OutputNode.nosdef
Source/: AJADevice.cpp  AJADevice.h  AJAMain.cpp  AJAMain.h  ChannelNode.cpp  Channels.cpp  Channels.h  DMANodeBase.hpp  DMAReadNode.cpp  DMAWriteNode.cpp  WaitVBLNode.cpp  firmware.hpp
